2010-12-17  Shimeng (Simon) Wang  <swang@google.com>

Reviewed by Steve Block.

        Fix V8 JNI binding.
        https://bugs.webkit.org/show_bug.cgi?id=51156

        There're LayoutTests in:
        http://trac.webkit.org/browser/trunk/LayoutTests/java/lc3/JSNumber
        to exercise these code paths.
        Though Chromium don't run them.
        Tested on Android fast/events/touch tests.

        * bridge/jni/v8/JNIUtilityPrivate.cpp:
        (JSC::Bindings::convertNPVariantToJValue):

Canonical link: https://commits.webkit.org/64630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74288 268f45cc-cd09-0410-ab3c-d52691b4dbfc